2013-10-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c src/plot3d.c src/misc.c(lp_parse):
	Fix several bugs involving color assignment to contour lines.
	Unfortunately this negates a previous fix that allowed explicit surface
	colors in a hidden3d plot to implicitly do "set hidden3d offset 0".
	Bug #1284 and others.

2013-10-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readascii df_readmatrix):  If the first field of a
	tab-separated csv file was empty, it would be incorrectly ignored when
	processing that input line.
	Bugfix. 

	* src/wxterminal/wxt_gui.cpp:  Extend toggling active region in key box
	to include enhanced text as well as non-enhanced text.
	Bugfix. 

2013-10-25  Thomas Bleher <tbleher@gmx.de>

	* src/getcolor.c (quantize_gray):  Windows compile error ("small" is not
	accepted as a variable name).

2013-10-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot.c (main):  If commands are being executed interactively
	because the user said something like "gnuplot -", then execution should
	continue after an error message just as in a normal interactive session.
	Bug #1295

	* src/mouse.c (event_reset):  Must not send commands to the terminal if
	it has not yet been initialized.

2013-10-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot.c (main):  If commands are being executed interactively
	because the user said something like "gnuplot -", then execution should
	continue after an error message just as in a normal interactive session.
	Bug #1295

2013-10-21  Christoph Bersch <usenet@bersch.net>

	* src/gadgets.h  src/graphics.c  src/graphics.h src/save.c src/set.c
	demo/clipobject.dem docs/gnuplot.doc:
	New object attribute clip/noclip.  "clip" retains the current default,
	clip to plot boundary unless one or more vertices are given in screen
	coordinates.  "noclip" clips to the canvas. Does not fix broken ellipse
	clipping.

2013-10-21  Ethan A Merritt  <merritt@u.washington.edu>
