@@ -2,10 +2,12 @@ New features, changes and fixes since gnuplot version 4.6.4
 ===========================================================
 
 * NEW new object attribute clip/noclip
+* CHANGE maximum number of using spec columns is now 11
 * FIX allow 'set pm3d' interpolate and top/bottom options to coexist
 * FIX revised handling of defined palettes with explicit maxcolors
 * FIX continue as normal after an interactive session error from "gnuplot -" 
 * FIX empty first field in a tab-separated-values file was incorrectly ignored
+* FIX several problems with color assignment to contour lines
 
 New features, changes and fixes in gnuplot version 4.6.4
 ========================================================
